add github link

--- a/src/app.css
+++ b/src/app.css
@@ -50,6 +50,10 @@ strong {
 a {
 	color: inherit;
 	text-underline-offset: 2px;
+
+	&:focus-visible {
+		outline: 1px solid var(--font-color);
+	}
 }
 
 /* ICONS */
