--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,8 @@
 
 :root {
 	--bg-color: #123;
-	--font-color: white;
+	--font-color: #fff;
+	--secondary-font-color: #bbb;
 	--outline-color: #789;
 	--btn-color: #3973ac;
 	--input-bg-color: #111111;
@@ -24,6 +25,12 @@ body {
 	color: var(--font-color);
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
+}
+
+.container {
+	max-width: 600px;
+	margin-inline: auto;
+	padding-inline: 1rem;
 }
 
 /* ELEMENTS */
