--- a/src/app.css
+++ b/src/app.css
@@ -25,6 +25,7 @@ body {
 	color: var(--font-color);
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
+	padding-bottom: 2rem;
 }
 
 .container {
