remove overflow during switch

--- a/src/app.css
+++ b/src/app.css
@@ -28,6 +28,10 @@ body {
 	padding-bottom: 2rem;
 }
 
+body.overflow-hidden {
+	overflow: hidden;
+}
+
 .container {
 	max-width: 600px;
 	margin-inline: auto;
