highlight letters during input

--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,7 @@
 	--input-bg-color: #111111;
 	--input-bg-focus-color: #161616;
 	--card-color: #318321;
+	--letter-highlight-color: #fff5;
 	--hint-bg-color: #296a1c;
 	--positive-color: #76e041;
 	--negative-color: #e93939;
